welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value ligne
      setPos(ligne,col);
             ^ColumnByColumn:13: error: not found: value ligne
      comp = ligne +1;
             ^